# python-project-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  rename.sh
.github/workflows/: ci.yml
my_project/: __main__.py
project_name/: __main__.py  log.py  settings.py
project_name/config/: __init__.py  log.py  settings.py
src/: __main__.py
src/project_name/: __main__.py  log.py  settings.py
tests/: test_log.py  test_main.py  test_settings.py
tests/config/: test_log.py  test_settings.py
